--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.0",
-    "next": "12.0.8",
+    "jotai": "^1.6.0",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "wavesurfer.js": "^5.2.0"
