--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.0",
+    "@trpc/client": "^9.20.2",
+    "@trpc/next": "^9.20.2",
+    "@trpc/react": "^9.20.2",
+    "@trpc/server": "^9.20.2",
     "jotai": "^1.6.0",
     "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "wavesurfer.js": "^5.2.0"
+    "react-query": "^3.34.16",
+    "wavesurfer.js": "^5.2.0",
+    "zod": "^3.14.2"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
