--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
+    "prisma": "^3.11.1",
     "tailwindcss": "^3.0.15",
     "typescript": "4.5.4"
   }
